# Plant-Care-Assistant-App

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ruff.toml
.github/workflows/: ci-ai.yml  ci.yml
ai/: README.md  error.txt  pyproject.toml
ai/docker/: api.Dockerfile  cpu.Dockerfile  gpu.Dockerfile
ai/models/: .gitignore  class_id_to_name.json  config.json
ai/notebooks/: diseases.ipynb  extraction.ipynb  preprocessing.ipynb  sick_plants.ipynb  test_training.ipynb  training.ipynb
ai/scripts/: test_api.py
ai/tests/: conftest.py
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: db.py  main.py  settings.py
backend/app/models/: base.py  requests.py
backend/app/routers/: auth.py  gamification.py  misc.py  plants.py  user_plants.py  users.py
backend/app/services/: achievement_catalog.py  gamification.py  plants.py  security.py  user_plants.py  users.py
data/migrations/: V1__init_schema.sql  V2__seed_tables.sql  init(nr1)_tables_create.sql  init(nr10)_gamification_tables.sql  init(nr11)_user_plants_health.sql  init(nr12)_user_plant_images.sql  init(nr13)_care_events.sql  init(nr14)_watering_cascade.sql  init(nr2)_inserty.sql  init(nr3)_blobstore.sql  init(nr4)_update_fid.sql  init(nr5)_plantsnet_id.sql  init(nr6)_plantsnet_populate.sql  init(nr7)_catalog_missing_species.sql  upload_plants.sh  (+2 more)
frontend/: .eslintrc.js  .gitignore  .prettierrc.js  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
infra/: compose.yaml  docker-compose.dev.yml  docker-compose.yml
(+199 files in other folders)
